--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -1,5 +1,8 @@
 {
   "general": {
+    "filters": "Filters",
+    "sort_title": "Sort by",
+    "view_more": "Show more",
     "password_page": {
       "login_form_heading": "Enter store using password:",
       "login_password_button": "Enter using password",
