--- a/locales/uk.json
+++ b/locales/uk.json
@@ -1,7 +1,11 @@
-{
+{ 
+
   "shopify": {
     "checkout": {
       "general": {
+        "filters": "Фільтри",
+        "sort_title": "Сортувати",
+          "view_more": "Показати ще",
         "autocomplete_zero_item": "Немає доступних товарів",
         "autocomplete_powered_by_google": "Завдяки {{brandName}}",
         "submit": "Надіслати",
@@ -1465,7 +1469,7 @@
         },
         "reveal_more_label": {
           "one": "Показати ще %{count} розташування",
-          "other": "Показати ще %{count} місць"
+          "other": "Показати ще %{count} місць",
         }
       },
       "captcha": {
